deployment/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-todo
  namespace: practice
  labels:
    app: backend-todo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: backend-todo
